--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>HTML</title>
+		<title>Nowa sstrona HTML</title>
 	</head>
 
 	<body>
-		<h1>HTML</h1>
+		<h1>Moja pierwsza strona HTML</h1>
 	</body>
 </html>
 
