--- a/HelloWorld.html
+++ b/HelloWorld.html
@@ -5,6 +5,7 @@
 
 	<body>
 		<h1>Moja pierwsza strona HTML</h1>
+		<p>Strona stworzonaa na potrzeby uruchomienia aplikacji Webowej Docker i K8S.</p>
 	</body>
 </html>
 
